<resources>
    <string name="app_name" translatable="false">Volunteer Book</string>
    <string name="sign_in">Вход</string>
    <string name="sign_in_as_org">Войти как орагнизатор</string>
    <string name="sign_in_as_vol">Войти как волонтёр</string>
    <string name="email">Введите почту</string>
    <string name="password">Введите пароль</string>
    <string name="mp_name">Введите название мероприятия:</string>
    <string name="enter_name">Введите название</string>
    <string name="enter_mp_descr">Введите краткое описание мероприятия:</string>
    <string name="hours">Часы:</string>
    <string name="share_mp">Опубликовать мероприятие</string>
</resources>