<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?colorOnPrimary"
    tools:context=".Event"
    android:padding="20dp">

    <TextView
        android:id="@+id/evname"
        android:layout_width="210dp"
        android:layout_height="wrap_content"
        android:text="@string/mp_name"
        android:textColor="?colorPrimary"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/eventnameinput"
        android:layout_width="0dp"
        android:layout_height="46dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/boarder"
        android:hint="@string/enter_name"
        android:inputType="text"
        android:padding="10dp"
        android:textColor="?textFillColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/evname" />

    <TextView
        android:id="@+id/fio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/enter_mp_descr"
        android:textColor="?colorPrimary"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/eventnameinput" />

    <TextView
        android:id="@+id/hoursev"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/hours"
        android:textColor="?colorPrimary"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/eventdescription" />

    <EditText
        android:id="@+id/eventdescription"
        android:gravity="top"
        android:layout_width="0dp"
        android:layout_height="155dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/boarder"
        android:inputType="text"
        android:textColor="?textFillColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fio"
        android:hint="@string/enter_mp_descr"
        android:padding="10dp"/>

    <EditText
        android:id="@+id/eventhours"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/boarder"
        android:hint="0"
        android:padding="10dp"
        android:inputType="number"
        android:textColor="?textFillColor"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hoursev" />

    <Button
        android:id="@+id/create_event"
        android:layout_width="250dp"
        android:layout_height="75dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/button"
        android:text="@string/share_mp"
        android:textColor="#FFFFFF"
        android:textColorHighlight="#393939"
        android:textColorHint="#6A6A6A"
        android:textColorLink="#424242"
        android:textSize="14sp"
        android:textStyle="normal"
        app:iconTint="#858585"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/eventhours"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>