<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?colorOnPrimary" >


    <Button
        android:id="@+id/goin_org"
        android:layout_width="170dp"
        android:layout_height="70dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="210dp"
        android:background="@drawable/button"
        android:text="@string/sign_in_as_org"
        android:textColor="#FFFFFF"
        android:textSize="14sp"
        android:textStyle="bold"
        app:iconTint="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.287"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password_space"
        app:layout_constraintVertical_bias="0.114" />

    <Button
        android:id="@+id/going_vol"
        android:layout_width="170dp"
        android:layout_height="70dp"
        android:layout_marginRight="16dp"
        android:background="@drawable/button"
        android:text="@string/sign_in_as_vol"
        android:textColor="#FFFFFF"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.557"

        app:layout_constraintStart_toEndOf="@+id/goin_org"
        app:layout_constraintTop_toBottomOf="@+id/password_space"
        app:layout_constraintVertical_bias="0.114" />

    <TextView
        android:id="@+id/registration_textView2"
        android:layout_width="294dp"
        android:layout_height="52dp"
        android:layout_marginTop="44dp"
        android:gravity="center"
        android:text="@string/sign_in"
        android:textColor="?colorPrimary"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView6"
        android:layout_width="150dp"
        android:layout_height="150dp"
        app:cardCornerRadius="250dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registration_textView2">
        <ImageView
            android:id="@+id/imageView6"
            android:layout_width="150dp"
            android:layout_height="150dp"
            app:srcCompat="@mipmap/ic_launcher" />
    </androidx.cardview.widget.CardView>

    <EditText
        android:id="@+id/email_space"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/boarder"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:paddingLeft="10dp"
        android:textColor="?colorPrimary"
        android:textColorHint="?colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView6" />

    <EditText
        android:id="@+id/password_space"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/boarder"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingLeft="10dp"
        android:textColor="?textFillColor"
        android:textColorHint="?colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email_space" />




</androidx.constraintlayout.widget.ConstraintLayout>